# degreesight-autonomous-agent

./: .env.example  .gitignore  CLAUDE.md  HANDOVER.md  IMPLEMENTATION_PLAN.md  README.md  SECURITY.md  morningstar_demo.py  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  claude-agent.yml  daily-standup.yml
agents/: morningstar-runner.md
config/: mcp.json
docker/: Dockerfile  Dockerfile.server  docker-compose.yml
docs/: ARCHITECTURE.md  COMPARISONS.md  USER_GUIDE.md
scripts/: daily_summary.sh  poll_jira.sh
skills/dry-run/: SKILL.md
skills/run/: SKILL.md
skills/version/: SKILL.md
src/agent/: coding_agent.py  config.py
src/integrations/: jira_client.py  slack_notifier.py
src/morningstar/: __init__.py  banner.py  cli.py  engine.py
src/webhooks/: server.py
tests/: test_engine.py  test_process_queue.py  test_slack.py  test_status.py  test_validation.py
