[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morningstar-agent"
version = "0.1.0"
description = "Autonomous coding agent powered by Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
morningstar = "morningstar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/morningstar"]
