[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morningstar-agent"
version = "0.1.0"
description = "Autonomous coding agent powered by Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.15.0,<1.0",
    "rich>=13.0.0,<15.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
morningstar = "morningstar.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/morningstar"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
